toxxi/tests/snapshots/ui_golden_test__emoji_completion.snap
---
source: rs-toxcore-c/toxxi/tests/ui_golden_test.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────────────
Contacts                │Tox ID: 00000000000000000000000000000000000000000000000
  ▼ System              │                                                       
┃   ○ Status            │                                                       
    ○ Logs              │                                                       
    ○ Files             │                                                       
                        │                                                       
  ▼ 👤 Friends          │                                                       
                        │                                                       
  ▼ 👥 Groups           │                                                       
                        │                                                       
  ▼ 🧑‍🤝‍🧑 Conferences      │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
[12:00] [Offline] <Tester> [Online] [Multi: Ctrl+D to send] [0:Status]          
╭──────────────────────────────────────────────────────────────────────────────╮
│> hello                                                                       │
│  how are you 😙                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────
