toxxi/tests/snapshots/ui_golden_test__emoji_picker_navigated.snap
---
source: rs-toxcore-c/toxxi/tests/ui_golden_test.rs
expression: rendered_nav
---
────────────────────────────────────────────────────────────────────────────────
Contacts                │Tox ID: 00000000000000000000000000000000000000000000000
  ▼ System              │                                                       
┃   ○ Status            │                                                       
    ○ Logs              │                                                       
    ○ Files             │                                                       
                        │                                                       
  ▼ 👤 Friends      ┌ Emoji Picker ────────────────────────┐                    
                    │Search: ❯ heart                       │                    
  ▼ 👥 Groups       │                                      │                    
                    │──────────────────────────────────────│                    
  ▼ 🧑‍🤝‍🧑 Conferences  │┌ Emojis ────────────────────────────┐│                    
                    ││😘 🥰 😍 😻 ❤️ 🧡 💛 💚 🩵 💙 💜 🤎 ││                    
                    ││🖤 🩶 🤍 🩷 💝 💖 💗 💓 💞 💕 💟 ♥️ ││                    
                    ││❣️ ❤️‍🩹 💔 ❤️‍🔥 🫀 🫶 💑 👩‍❤️‍👨 👨‍❤️‍👨 👩‍❤️‍👩       ││                    
                    ││                                    ││                    
                    │└────────────────────────────────────┘│                    
                    │[↑↓←→] Navigate [Enter] Select [Esc] Close                 
                    └──────────────────────────────────────┘                    
                        │                                                       
                        │                                                       
[12:00] [Offline] <Tester> [Online] [0:Status]                                  
╭──────────────────────────────────────────────────────────────────────────────╮
│>                                                                             │
╰──────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────
