toxxi/tests/snapshots/ui_golden_test__emoji_picker_selection_result.snap
---
source: rs-toxcore-c/toxxi/tests/ui_golden_test.rs
expression: rendered_result
---
────────────────────────────────────────────────────────────────────────────────
Contacts                │Tox ID: 00000000000000000000000000000000000000000000000
  ▼ System              │                                                       
┃   ○ Status            │                                                       
    ○ Logs              │                                                       
    ○ Files             │                                                       
                        │                                                       
  ▼ 👤 Friends          │                                                       
                        │                                                       
  ▼ 👥 Groups           │                                                       
                        │                                                       
  ▼ 🧑‍🤝‍🧑 Conferences      │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
                        │                                                       
[12:00] [Offline] <Tester> [Online] [0:Status]                                  
╭──────────────────────────────────────────────────────────────────────────────╮
│> 🩶                                                                          │
╰──────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────
